swagger docs updated with the persons data manipulation setup
